Add favicon, logo, generated dress code images, fix YouTube embed, update chat greeting & episodes

--- a/public/chamber.html
+++ b/public/chamber.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queen's Chamber — Gossip Room 👑</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -415,7 +416,8 @@
             <div class="messages-area" id="messages-area">
                 <div class="chat-welcome">
                     <div class="welcome-emoji">🍷🫖✨</div>
-                    <p>Welcome to the Queen's Chamber!<br>
+                    <p><strong>Dearest Gentle Reader,</strong><br>
+                        Welcome to the Queen's Chamber — the most scandalous room in all the ton.<br>
                         The wine is poured, the tea is brewed, and the gossip is ready to flow.<br>
                         Be witty. Be scandalous. Be <em>legendary</em>.</p>
                 </div>
