--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Countdown to Bridgerton Season 4 Part 2 on Netflix — Ishmeen, Vishal, Rishika & Kohli are counting every second!">
     <title>Bridgerton Season 4 Part 2 — The Countdown</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -365,12 +366,18 @@
             <p class="section-description">Every great ball requires the perfect orchestra. Let the music of Bridgerton
                 transport you to Regency London.</p>
         </div>
-        <div class="reveal-on-scroll" style="max-width: 700px; margin: 0 auto;">
-            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);" width="100%" height="400"
-                src="https://www.youtube.com/embed/videoseries?list=PLJqsJYaRlGRJZ0V_xSOBhebhmMm2GkEH5"
-                title="Bridgerton Soundtrack" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen loading="lazy"></iframe>
+        <div class="reveal-on-scroll"
+            style="max-width: 700px; margin: 0 auto; display: flex; flex-direction: column; gap: 16px;">
+            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);" width="100%" height="315"
+                src="https://www.youtube.com/embed/gpv7ayf_tyE?si=QwVfG6hAkK9X9N6C"
+                title="Bridgerton Season 4 Soundtrack" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);" width="100%" height="315"
+                src="https://www.youtube.com/embed/FbhXReMTWU0?si=Ln8XvKxD_Y3M5XRH" title="Bridgerton Classical Covers"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
         </div>
     </section>
 
@@ -383,27 +390,37 @@
                 <span>⟡</span><span class="divider-line"></span><span>👗</span><span
                     class="divider-line"></span><span>⟡</span>
             </div>
-            <p class="section-description">One does not simply attend a Bridgerton watch party in ordinary attire. Here
-                are the royal guidelines.</p>
+            <p class="section-description">One does not simply attend a Bridgerton watch party in ordinary attire.<br>
+                Choose your aesthetic, darling — and dress for the occasion.</p>
         </div>
-        <div class="info-content reveal-on-scroll">
-            <div class="info-card">
-                <div class="info-icon">👑</div>
-                <h3>Regency Elegance</h3>
-                <p>Think empire waistlines, flowing fabrics, and soft pastels. Channel your inner Daphne with a pearl
-                    necklace and elegant updo. Bonus points for opera gloves!</p>
+        <div class="info-content reveal-on-scroll"
+            style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 24px; max-width: 960px; margin: 0 auto;">
+            <div class="info-card" style="text-align: center; padding: 0; overflow: hidden; border-radius: 20px;">
+                <img src="images/regency-elegance.png" alt="Regency Elegance"
+                    style="width: 100%; height: 220px; object-fit: cover; border-bottom: 1px solid rgba(201,168,76,0.15);">
+                <div style="padding: 24px 20px;">
+                    <h3 style="margin-bottom: 8px;">👑 Regency Elegance</h3>
+                    <p style="font-size: 0.95rem;">Empire waistlines, flowing pastels, pearl necklaces, and elegant
+                        updos. Channel your inner Daphne Bridgerton. Bonus points for opera gloves and a fan!</p>
+                </div>
             </div>
-            <div class="info-card">
-                <div class="info-icon">🍷</div>
-                <h3>Cozy Luxe</h3>
-                <p>Not ready for full Regency? Go "Cozy Luxe" — silk pajamas, a velvet robe, and a wine glass that never
-                    empties. You'll look like a duke who just rolled out of bed. Perfectly acceptable.</p>
+            <div class="info-card" style="text-align: center; padding: 0; overflow: hidden; border-radius: 20px;">
+                <img src="images/cozy-luxe.png" alt="Cozy Luxe"
+                    style="width: 100%; height: 220px; object-fit: cover; border-bottom: 1px solid rgba(201,168,76,0.15);">
+                <div style="padding: 24px 20px;">
+                    <h3 style="margin-bottom: 8px;">🍷 Cozy Luxe</h3>
+                    <p style="font-size: 0.95rem;">Silk pajamas, a velvet robe, and a wine glass that never empties.
+                        Look like a duke who just rolled out of bed — perfectly acceptable for a watch party.</p>
+                </div>
             </div>
-            <div class="info-card">
-                <div class="info-icon">🎭</div>
-                <h3>The Wildcard</h3>
-                <p>Come as your favorite Bridgerton character! Penelope's yellow? Benedict's paint-stained artist look?
-                    The Queen's towering wig? The bolder, the better. The ton rewards audacity.</p>
+            <div class="info-card" style="text-align: center; padding: 0; overflow: hidden; border-radius: 20px;">
+                <img src="images/wildcard-costume.png" alt="The Wildcard"
+                    style="width: 100%; height: 220px; object-fit: cover; border-bottom: 1px solid rgba(201,168,76,0.15);">
+                <div style="padding: 24px 20px;">
+                    <h3 style="margin-bottom: 8px;">🎭 The Wildcard</h3>
+                    <p style="font-size: 0.95rem;">Come as your favorite character! Penelope's iconic yellow, Benedict's
+                        paint-stained smock, or Queen Charlotte's towering wig. The ton rewards audacity!</p>
+                </div>
             </div>
         </div>
     </section>
