--- a/public/admin.html
+++ b/public/admin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin — Send Royal Invitations</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -334,6 +335,8 @@
 
     <main class="admin-page">
         <div class="admin-header">
+            <img src="images/logo.png" alt="Royal Crest"
+                style="width: 120px; height: 120px; object-fit: contain; margin-bottom: 16px; filter: drop-shadow(0 0 20px rgba(201,168,76,0.3));">
             <h1>Royal Decrees</h1>
             <p>Send invitations to the chosen few who are worthy of the Queen's Chamber</p>
         </div>
